# more-tech-4.0

./: README.md  docker-compose.yaml  kafka.yml
faust_app/: Dockerfile  categories_map.json  manage.py  requirements.txt
faust_app/app/: app.py  main.py  models.py  preprocessor.py  topics.py
faust_app/app/logic/: categorization.py
faust_app/db/: base.py
parsers/: Article.py  ArticleDataSource.py  ConsultantParser.py  article_data_source.py
parsers/vc_parser/: ParserTest.py  VcArticleContent.py  VcArticleParser.py  VcArticleUrlsExtractor.py  VcConfig.py  VcParser.py  VcParserRunner.py  article_parser_callback.py  kafka_sender.py  vc_article_parser.py  vc_article_urls_extractor.py  vc_config.py  vc_parser.py  vc_parser_runner.py
parsers_daemons/: buh.py  dataset.py  dataset.tsv  test.py
webgateway/: Dockerfile  pyproject.toml  requirements.txt
webgateway/apigateway/: mongodb.py  settings.py  urls.py
webgateway/apigateway/http/: __init__.py  news.py
webgateway/apigateway/schemas/requests/: categories.py  pagination.py
webgateway/apigateway/schemas/responses/: news.py
webgateway/apigateway/services/: categories.py  trends.py
